# dp-project

./: .gitignore  CMakeLists.txt  algorithm.md  cMakeLists.txt  makefile  readme.md  report.md
src/: imports.hpp  main.cpp  main.hpp
src/domain/: poet.hpp  process.cpp  process.hpp  resource.cpp  resource.hpp  volunteer.hpp
src/domain/definitions/: Resource.hpp  packet.cpp  packet.hpp  timestamp.hpp
src/domain/poet/: action.cpp  action.hpp  common.hpp  item.hpp  state.cpp  state.hpp
src/domain/poet/tasks/: communication.cpp  communication.hpp  master.cpp  master.hpp
src/domain/tasks/: communication.cpp  communication.hpp  master.cpp  master.hpp
src/domain/tasks/poet/: communication.cpp  communication.hpp  master.cpp  master.hpp
src/domain/tasks/volunteer/: master.hpp
src/domain/volunteer/: action.cpp  action.hpp  state.cpp  state.hpp
src/domain/volunteer/tasks/: communication.cpp  communication.hpp  master.cpp  master.hpp
src/shared/: clock.hpp  globals.cpp  globals.hpp  imports.hpp  process.cpp  process.hpp  sharedtime.hpp
src/shared/utils/: color.hpp  common.cpp  common.hpp  console.cpp  console.hpp  random.cpp  random.hpp
src/utils/: color.hpp  common.hpp  console.cpp  console.hpp  random.hpp
